[package]
name = "srt-line-cut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
itertools = "0.10.5"
srtlib = { git = "https://github.com/jmshrv/srtlib.git", rev = "ec8b2a2" }